--- a/vercel.json
+++ b/vercel.json
@@ -12,5 +12,8 @@
       "dest": "src/main.js",
       "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "HEAD", "OPTIONS"]
     }
+  ],
+  "rewrites": [
+    {"source": "/(.*)", "destination": "/"}
   ]
 }
